minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: rupeshs11/3-tier_chatapp:backend-v3
        ports:
        - containerPort: 5000
