minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
     app: frontend
  template:
    metadata:
      name: frontend-pods
      namespace: chat-app
      labels: 
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: rupeshs11/3-tier_chatapp:frontend-v3
        ports: 
        - containerPort: 80
