minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
     app: mongo
  template:
    metadata:
      name: mongo-pods
      namespace: chat-app
      labels: 
        app: mongo
    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:latest
        ports: 
        - containerPort: 27017
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
