minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
