minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chat-app
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
