minikube-labs/3-tier chatapp/full-stack_chatApp/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chat-app
spec:
  ingressClassName: nginx
  rules:
  - host: chat-knox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
